[package]
name = "t_i2c_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiao_m0 = {version="0.11.0", features=["rt"]}
atsamd-hal = { version = "0.13", default-features=false, features=["unproven"] }
cortex-m = "0.7"
cortex-m-rt = "^0.6.15"
embedded-hal = "0.2.6"

[features]
default = ["atsamd-hal/samd21g", "atsamd-hal/samd21g-rt"]


[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"
